# smart-house

./: Cargo.toml  Makefile
.github/workflows/: general.yml
examples/: report.rs
power-switch/: Cargo.toml
power-switch/src/: command.rs  lib.rs  power_switch.rs  response.rs
smart-house/: .gitignore  Cargo.toml
smart-house/examples/: report.rs
smart-house/src/: errors.rs  lib.rs  main.rs  smart_house.rs  thermometer.rs
smart-house/tests/: report.rs
src/: lib.rs  main.rs  power_switch.rs  smart_house.rs  thermometer.rs
src/smart_house/: room.rs
tests/: report.rs
thermometer/: Cargo.toml
thermometer/src/: lib.rs  thermometer.rs
