[package]
name = "smart-house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
power-switch = { path = "../power-switch" }
thermometer = { path = "../thermometer" }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
