[package]
name = "thermometer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["net", "rt-multi-thread", "io-util", "macros", "time"] }
